# hermes-feishu-streaming-plugin

./: AGENTS.md  README.md  pyproject.toml
docs/: feishu-restore-runbook.md
src/hermes_feishu_streaming_plugin/: __init__.py  bundle.py  cli.py  installer.py  locator.py
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-streaming-migration-kit/: README.md  SKILL.md
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-streaming-migration-kit/files/gateway/: display_config.py  run.py
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-streaming-migration-kit/files/tests/agent/: test_display.py
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-streaming-migration-kit/references/: migration-steps.md  modification-map.json  modified-files.md  transfer-bundle-path.txt  upgrade-locator.md  verification.md
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-weixin-streaming-migration-kit/: README.md  SKILL.md
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-weixin-streaming-migration-kit/files/gateway/: config.py  display_config.py  run.py  stream_consumer.py
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-weixin-streaming-migration-kit/files/hermes_cli/: gateway.py
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-weixin-streaming-migration-kit/files/tests/gateway/: test_display_config.py  test_feishu.py  test_feishu_session_notices.py  test_gateway_config_session_reset.py  (+2 more)
src/hermes_feishu_streaming_plugin/assets/hermes-feishu-weixin-streaming-migration-kit/references/: feishu-format-calls.md  migration-steps.md  migration.patch  modification-map.json  modified-files.md  transfer-bundle-path.txt  upgrade-locator.md  verification.md
tests/: test_bundle.py  test_cli.py  test_installer.py  test_locator.py
(+2 files in other folders)
