[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-feishu-streaming-plugin"
version = "0.1.0"
description = "Standalone migration plugin for Hermes Feishu/Weixin streaming-card fixes"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hermes Agent" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[project.scripts]
hermes-feishu-plugin = "hermes_feishu_streaming_plugin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_feishu_streaming_plugin = ["assets/**/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
