[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-feishu-streaming-plugin"
version = "0.2.0"
description = "Transferable skill repository and CLI for Hermes Feishu/Weixin streaming-card migration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hermes Agent" }]
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[project.scripts]
hermes-feishu-plugin = "hermes_feishu_streaming_plugin.cli:main"
hermes-feishu-skillkit = "hermes_feishu_streaming_plugin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_feishu_streaming_plugin = ["assets/**/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
